@@ -1,5 +1,11 @@
 2008-04-16  Dan Williams  <dcbw@redhat.com>
 
+	* src/connection-editor/page-dsl.c
+	  src/connection-editor/page-mobile.c
+		- fetch secrets from the keyring to populate entries with
+
+2008-04-16  Dan Williams  <dcbw@redhat.com>
+
 	* src/connection-editor/ce-mobile-wizard.glade
 	  src/connection-editor/mobile-wizard.c
 	  src/connection-editor/mobile-wizard.h
